--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,26 @@
 {
     "env": {
-        "es2021": true,
-        "node": true
+        "browser": true,
+        "commonjs": true,
+        "es2021": true
     },
-    "extends": [
-        "airbnb-base"
+    "extends": "airbnb-base",
+    "overrides": [
     ],
     "parserOptions": {
-        "ecmaVersion": 2020
+        "ecmaVersion": "latest"
     },
     "rules": {
-        "no-console": "off",
-        "@typescript-eslint/no-unused-vars": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "indent": "off",
-        "quotes": "off",
-        "linebreak-style": "off",
-        "lines-between-class-members": "off",
-        "no-multiple-empty-lines": "off",
-        "comma-dangle": "off",
-        "no-underscore-dangle": "off",
-        "no-unused-vars": "off",
-        "eol-last": "off",
-        "typescript-eslint/no-unused-vars": "off",
-        "semi": "off"
+        "max-len": [
+            "error",
+            {
+                "code": 80,
+                "tabWidth": 2,
+                "comments": 80,
+                "ignoreUrls": true,
+                "ignoreStrings": true,
+                "ignoreTemplateLiterals": true
+            }
+        ]
     }
 }
