--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "notes-app-back-end",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "open-music-api-v3",
+  "version": "3.0.0",
+  "description": "Open Music API",
+  "main": "server.js",
   "scripts": {
     "start": "node ./src/server.js",
     "start:prod": "NODE_ENV=production node ./src/server.js",
     "start:dev": "nodemon ./src/server.js",
-    "lint": "eslint ./src",
+    "lint": "npx eslint src migrations",
     "migrate": "node-pg-migrate"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ilham Maulana",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.52.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.31.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.698.0",
+    "@aws-sdk/s3-request-presigner": "^3.698.0",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.4",
     "auto-bind": "^4.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -29,7 +33,10 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.1.20",
     "node-pg-migrate": "^7.7.1",
+    "nodemailer": "^6.9.16",
     "notes-app-back-end": "file:",
-    "pg": "^8.13.1"
+    "open-music-api-v3": "file:",
+    "pg": "^8.13.1",
+    "redis": "^4.7.0"
   }
 }
